k8s/beta/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: dashboard
  namespace: beta
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: dashboard
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: beta-dashboard
      labels:
        name: dashboard
    spec:
      nodeSelector:
        node-role.kubernetes.io/node-services: ""
      imagePullSecrets:
      - name: registry
      containers:
      - envFrom:
        - configMapRef:
            name: dashboard
        name: beta
        image: razorpay/dashboard:6b0505f6a9f77410c910f54c1f4a4eb2c76d4fef
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: trace
            mountPath: /app/storage/logs/
          - name: nginx
            mountPath: /var/log/nginx/
        readinessProbe:
          httpGet:
            path: /status
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 120
        livenessProbe:
          httpGet:
            path: /commit.txt
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 100
        lifecycle:
          preStop:
            exec:
              command: ["/bin/rm","-f","/app/public/commit.txt",";","sleep","5",";","/usr/sbin/nginx","-s","quit"]
      terminationGracePeriodSeconds: 60
      volumes:
      - name: trace
        hostPath:
          path: /var/log/fluentd/splunk/beta/trace
      - name: nginx
        hostPath:
          path: /var/log/fluentd/splunk/beta/nginx
      dnsPolicy: Default
      restartPolicy: Always
