k8s/beta/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  generation: 1
  name: dashboard
  namespace: beta
spec:
  rules:
  - host: beta-dashboard.razorpay.in
    http:
      paths:
      - path: /
        backend:
          serviceName: dashboard
          servicePort: 80
